tests/snapshots/parse_errors__missing_op.snap
---
source: tests/parse_errors.rs
expression: merged
---
stdout:


stderr:
Error: 
   ╭─[<unknown>:?:?]
   │
 1 │ print 1 1;
   │ ──┬──   ┬  
   │   ╰──────── This statement should be terminated with ;
   │         │  
   │         ╰── There should be a ; here
───╯



